--- a/style2.css
+++ b/style2.css
@@ -131,8 +131,7 @@ nav ul li a {
 
 /* Estilo do rodapé */
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #f6f4f0 ;
     text-align: center;
     padding: 20px 0;
 }
